@@ -1,5 +1,8 @@
 $Id$
 
+-- 2008-06-23 version 6.x-1.x-dev
+* #241271 fixed creation of extra <p> tags (removed dirt hacks for IE, experimental)
+
 -- 2008-06-20 version 6.x-1.x-dev
 * #269653 added warning page before deleting a profile
 * #272834 fixed Image Assist integration problems
